# Career-Change-Preparation

./: .gitignore  README.md  lesson_1.sql  lesson_3.sql  lesson_4.sql  lesson_5.sql  lesson_7.sql
Business Administration/: Business Math.ipynb  Case Structuring.ipynb  Fit Interview.ipynb  Narratives.ipynb
HTML/: my-to-do-list.html  quizzes.html  slack-card.html  udacity-header.html
HTML - IBM/: form_validation.html  solarsystem.html
HTML - IBM/conversions/: index.html
HTML - IBM/css/: style.css
HTML - IBM/js/: script.js
HTML - IBM/portfolio-website/: index.html
HTML - IBM/simple-interest-calculator/: index.html  script.js  style.css
LearnNETChallenge/DotNetDebugging/: Program.cs
LearnNETChallenge/browser-extension/: package-lock.json
LeetCode/: LeetCode.sln
SQL-Python-Git/: README.md
Udacity/: Food-Prices-Lesson-11.csv
Udemy/langchain/documentation-helper/: ingestion.py  langchain-crawler.py  main.py  pyproject.toml
Udemy/langchain/documentation-helper/backend/: core.py
Udemy/langchain/react-langchain/: callbacks.py  main.py  pyproject.toml
Udemy/langchain/vectors-in-memory/: main.py  pyproject.toml
Udemy/langchain/vectors-in-memory/faiss_index_react/: index.pkl
Udemy/python-days-of-code/: pyproject.toml  requirements.txt
Udemy/python-days-of-code/src/: README.md
Udemy/python-days-of-code/src/calculators/: bmi_calculator.py  calculator.py  tip_calculator.py
Udemy/python-days-of-code/src/gui/: flashcard.py  mi_to_km.py  password_generator.py  passwords_utils.py  pomodoro.py
Udemy/python-days-of-code/src/gui/data/: passwords.json  words_to_learn.csv
Udemy/python-days-of-code/src/lessons/api/: day33.md
Udemy/python-days-of-code/src/lessons/api/iss-checker/: iss-checker.py
Udemy/python-days-of-code/src/lessons/api/kayne-quotes/: main.py
Udemy/python-days-of-code/src/lessons/api/rain_alert/: main.py
Udemy/python-days-of-code/src/lessons/api/stock-checker/: main.py
Udemy/python-days-of-code/src/lessons/api/tracker/: main.py  profile.html
Udemy/python-days-of-code/src/lessons/api/triva/: data.py  quiz_brain.py  ui.py
Udemy/python-days-of-code/src/lessons/gui/: intro.py
Udemy/python-days-of-code/src/lessons/misc/: args-kwargs.py  dates_times.py
Udemy/python-days-of-code/src/lessons/smtp/: main.py
Udemy/python-days-of-code/src/lessons/text/comprehensions/: main.py
Udemy/python-days-of-code/src/lessons/text/csv/: intro.py  squirrel.py
Udemy/python-days-of-code/src/lessons/text/directories/: main.py
Udemy/python-days-of-code/src/lessons/text/read-write/: main.py  my_file.txt
Udemy/python-days-of-code/src/lessons/turtle/: hirst.py  intro.py  spirograph.py
Udemy/python-days-of-code/src/lessons/web/billboard-100/: main.py  token.txt
Udemy/python-days-of-code/src/lessons/web/birthday/: index.html
Udemy/python-days-of-code/src/lessons/web/bs4/: intro.py  main.py  scraper.py
Udemy/python-days-of-code/src/lessons/web/html-css-intro/: box-model.html  css-selector.html  external.html  font-family.html  font-properties.html  html-intro.html  list-nested.html
Udemy/python-days-of-code/src/lessons/web/misc/: anchor.html  img.html  list-nested.html  list.html
Udemy/python-days-of-code/src/lessons/web/motivation-meme/: index.html  style.css
Udemy/python-days-of-code/src/lessons/web/movie-ranker/: index.html
Udemy/python-days-of-code/src/lessons/web/movie-recommender/: main.py  movies.txt
Udemy/python-days-of-code/src/lessons/web/price-checker/: main.py
Udemy/python-days-of-code/src/lessons/web/selenium/: challenge.py  interaction.py  intro.py  signup.py  test.py
Udemy/python-days-of-code/src/random/birthday_wisher/: birthdays.csv  main.py
Udemy/python-days-of-code/src/random/blind_auction/: art.py  blind_auction.py  main.py
Udemy/python-days-of-code/src/random/coffee_machine/: coffee_machine.py  shop.json
Udemy/python-days-of-code/src/random/coffee_machine_2/: main.py  menu.py  money_machine.py
Udemy/python-days-of-code/src/random/fizzbuzz/: fizzbuzz.py
Udemy/python-days-of-code/src/random/story_adventure/: story-adventure.py
Udemy/python-days-of-code/src/security_text/: caesar_cipher.py  password_generator.py
Udemy/python-days-of-code/src/text_games/: __init__.py  app.py  game.py  utils.py
Udemy/python-days-of-code/src/text_games/blackjack/: __init__.py  __main__.py  blackjack.py  deck.py  hand.py  logo.py
Udemy/python-days-of-code/src/text_games/hangman/: __init__.py  __main__.py  hangman.py  utils.py
Udemy/python-days-of-code/src/text_games/higher_lower/: __init__.py  data.py  higher_lower.py  logo.py
Udemy/python-days-of-code/src/text_games/number_guessing/: __init__.py  logo.py  number_guessing.py
Udemy/python-days-of-code/src/text_games/quiz/: __init__.py  data.py  logo.py  question.py  quiz.py
Udemy/python-days-of-code/src/text_games/rock_paper_scissors/: __init__.py  logo.py  rock_paper_scissors.py
Udemy/python-days-of-code/src/turtle_games/: gui.py
Udemy/python-days-of-code/src/turtle_games/etch_a_sketch/: main.py
Udemy/python-days-of-code/src/turtle_games/pong/: ball.py  constants.py  main.py  paddle.py  scoreboard.py
Udemy/python-days-of-code/src/turtle_games/snake/: constants.py  food.py  main.py  scoreboard.py  snake.py
Udemy/python-days-of-code/src/turtle_games/turtle_crossing/: car.py  constants.py  crosser.py  main.py  scoreboard.py
Udemy/python-days-of-code/src/turtle_games/turtle_race/: main.py
Udemy/python-days-of-code/src/turtle_games/us_states/: main.py
Udemy/python-days-of-code/tests/old/day001/: test_exercise.py
Udemy/python-days-of-code/tests/old/day002/: test_exercise.py
Udemy/python-days-of-code/tests/old/day003/: test_exercise.py
Udemy/python-days-of-code/tests/old/day004/: test_exercise.py
Udemy/python-days-of-code/tests/old/day005/: test_exercise.py
Udemy/python-days-of-code/tests/old/day007/: test_hangman.py
Udemy/python-days-of-code/tests/old/day008/: test_caesar_cipher.py  test_exercise.py
Udemy/python-days-of-code/tests/old/day009/: test_blind_auction.py
Udemy/python-days-of-code/tests/old/day011/: test_deck.py  test_hand.py
(+769 files in other folders)
