[tool.poetry]
name = "react-langchain"
version = "0.1.0"
description = "Udemy LangChain course - react section"
authors = ["burmeisterryan3 <ryan.j.burmeister@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.15"
langchain-openai = "^0.1.23"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
